# biz/model/upload/upload.pb.go
@@ -1,384 +1,0 @@
-// Code generated by protoc-gen-go. DO NOT EDIT.
-// versions:
-// 	protoc-gen-go v1.36.11
-// 	protoc        v7.35.1
-// source: idl/upload.proto
-
-package upload
-
-import (
-	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
-	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
-	reflect "reflect"
-	sync "sync"
-	unsafe "unsafe"
-)
-
-const (
-	// Verify that this generated code is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
-	// Verify that runtime/protoimpl is sufficiently up-to-date.
-	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
-)
-
-type UploadFile struct {
-	state         protoimpl.MessageState `protogen:"open.v1"`
-	FileId        int64                  `protobuf:"varint,1,opt,name=file_id,json=fileId,proto3" json:"file_id,omitempty"`
-	FileName      string                 `protobuf:"bytes,2,opt,name=file_name,json=fileName,proto3" json:"file_name,omitempty"`
-	FileUrl       string                 `protobuf:"bytes,3,opt,name=file_url,json=fileUrl,proto3" json:"file_url,omitempty"`
-	FilePath      string                 `protobuf:"bytes,4,opt,name=file_path,json=filePath,proto3" json:"file_path,omitempty"`
-	MimeType      string                 `protobuf:"bytes,5,opt,name=mime_type,json=mimeType,proto3" json:"mime_type,omitempty"`
-	Size          int64                  `protobuf:"varint,6,opt,name=size,proto3" json:"size,omitempty"`
-	BizType       string                 `protobuf:"bytes,7,opt,name=biz_type,json=bizType,proto3" json:"biz_type,omitempty"`
-	CreatedAt     string                 `protobuf:"bytes,8,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *UploadFile) Reset() {
-	*x = UploadFile{}
-	mi := &file_idl_upload_proto_msgTypes[0]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *UploadFile) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*UploadFile) ProtoMessage() {}
-
-func (x *UploadFile) ProtoReflect() protoreflect.Message {
-	mi := &file_idl_upload_proto_msgTypes[0]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use UploadFile.ProtoReflect.Descriptor instead.
-func (*UploadFile) Descriptor() ([]byte, []int) {
-	return file_idl_upload_proto_rawDescGZIP(), []int{0}
-}
-
-func (x *UploadFile) GetFileId() int64 {
-	if x != nil {
-		return x.FileId
-	}
-	return 0
-}
-
-func (x *UploadFile) GetFileName() string {
-	if x != nil {
-		return x.FileName
-	}
-	return ""
-}
-
-func (x *UploadFile) GetFileUrl() string {
-	if x != nil {
-		return x.FileUrl
-	}
-	return ""
-}
-
-func (x *UploadFile) GetFilePath() string {
-	if x != nil {
-		return x.FilePath
-	}
-	return ""
-}
-
-func (x *UploadFile) GetMimeType() string {
-	if x != nil {
-		return x.MimeType
-	}
-	return ""
-}
-
-func (x *UploadFile) GetSize() int64 {
-	if x != nil {
-		return x.Size
-	}
-	return 0
-}
-
-func (x *UploadFile) GetBizType() string {
-	if x != nil {
-		return x.BizType
-	}
-	return ""
-}
-
-func (x *UploadFile) GetCreatedAt() string {
-	if x != nil {
-		return x.CreatedAt
-	}
-	return ""
-}
-
-type UploadImageRequest struct {
-	state         protoimpl.MessageState `protogen:"open.v1"`
-	BizType       string                 `protobuf:"bytes,1,opt,name=biz_type,json=bizType,proto3" json:"biz_type,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *UploadImageRequest) Reset() {
-	*x = UploadImageRequest{}
-	mi := &file_idl_upload_proto_msgTypes[1]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *UploadImageRequest) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*UploadImageRequest) ProtoMessage() {}
-
-func (x *UploadImageRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_idl_upload_proto_msgTypes[1]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use UploadImageRequest.ProtoReflect.Descriptor instead.
-func (*UploadImageRequest) Descriptor() ([]byte, []int) {
-	return file_idl_upload_proto_rawDescGZIP(), []int{1}
-}
-
-func (x *UploadImageRequest) GetBizType() string {
-	if x != nil {
-		return x.BizType
-	}
-	return ""
-}
-
-type UploadImageResponse struct {
-	state         protoimpl.MessageState `protogen:"open.v1"`
-	Upload        *UploadFile            `protobuf:"bytes,1,opt,name=upload,proto3" json:"upload,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *UploadImageResponse) Reset() {
-	*x = UploadImageResponse{}
-	mi := &file_idl_upload_proto_msgTypes[2]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *UploadImageResponse) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*UploadImageResponse) ProtoMessage() {}
-
-func (x *UploadImageResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_idl_upload_proto_msgTypes[2]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use UploadImageResponse.ProtoReflect.Descriptor instead.
-func (*UploadImageResponse) Descriptor() ([]byte, []int) {
-	return file_idl_upload_proto_rawDescGZIP(), []int{2}
-}
-
-func (x *UploadImageResponse) GetUpload() *UploadFile {
-	if x != nil {
-		return x.Upload
-	}
-	return nil
-}
-
-type GetUploadInfoRequest struct {
-	state         protoimpl.MessageState `protogen:"open.v1"`
-	Id            int64                  `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *GetUploadInfoRequest) Reset() {
-	*x = GetUploadInfoRequest{}
-	mi := &file_idl_upload_proto_msgTypes[3]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *GetUploadInfoRequest) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*GetUploadInfoRequest) ProtoMessage() {}
-
-func (x *GetUploadInfoRequest) ProtoReflect() protoreflect.Message {
-	mi := &file_idl_upload_proto_msgTypes[3]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use GetUploadInfoRequest.ProtoReflect.Descriptor instead.
-func (*GetUploadInfoRequest) Descriptor() ([]byte, []int) {
-	return file_idl_upload_proto_rawDescGZIP(), []int{3}
-}
-
-func (x *GetUploadInfoRequest) GetId() int64 {
-	if x != nil {
-		return x.Id
-	}
-	return 0
-}
-
-type GetUploadInfoResponse struct {
-	state         protoimpl.MessageState `protogen:"open.v1"`
-	Upload        *UploadFile            `protobuf:"bytes,1,opt,name=upload,proto3" json:"upload,omitempty"`
-	unknownFields protoimpl.UnknownFields
-	sizeCache     protoimpl.SizeCache
-}
-
-func (x *GetUploadInfoResponse) Reset() {
-	*x = GetUploadInfoResponse{}
-	mi := &file_idl_upload_proto_msgTypes[4]
-	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-	ms.StoreMessageInfo(mi)
-}
-
-func (x *GetUploadInfoResponse) String() string {
-	return protoimpl.X.MessageStringOf(x)
-}
-
-func (*GetUploadInfoResponse) ProtoMessage() {}
-
-func (x *GetUploadInfoResponse) ProtoReflect() protoreflect.Message {
-	mi := &file_idl_upload_proto_msgTypes[4]
-	if x != nil {
-		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
-		if ms.LoadMessageInfo() == nil {
-			ms.StoreMessageInfo(mi)
-		}
-		return ms
-	}
-	return mi.MessageOf(x)
-}
-
-// Deprecated: Use GetUploadInfoResponse.ProtoReflect.Descriptor instead.
-func (*GetUploadInfoResponse) Descriptor() ([]byte, []int) {
-	return file_idl_upload_proto_rawDescGZIP(), []int{4}
-}
-
-func (x *GetUploadInfoResponse) GetUpload() *UploadFile {
-	if x != nil {
-		return x.Upload
-	}
-	return nil
-}
-
-var File_idl_upload_proto protoreflect.FileDescriptor
-
-const file_idl_upload_proto_rawDesc = "" +
-	"\n" +
-	"\x10idl/upload.proto\x12\x06upload\"\xe5\x01\n" +
-	"\n" +
-	"UploadFile\x12\x17\n" +
-	"\afile_id\x18\x01 \x01(\x03R\x06fileId\x12\x1b\n" +
-	"\tfile_name\x18\x02 \x01(\tR\bfileName\x12\x19\n" +
-	"\bfile_url\x18\x03 \x01(\tR\afileUrl\x12\x1b\n" +
-	"\tfile_path\x18\x04 \x01(\tR\bfilePath\x12\x1b\n" +
-	"\tmime_type\x18\x05 \x01(\tR\bmimeType\x12\x12\n" +
-	"\x04size\x18\x06 \x01(\x03R\x04size\x12\x19\n" +
-	"\bbiz_type\x18\a \x01(\tR\abizType\x12\x1d\n" +
-	"\n" +
-	"created_at\x18\b \x01(\tR\tcreatedAt\"/\n" +
-	"\x12UploadImageRequest\x12\x19\n" +
-	"\bbiz_type\x18\x01 \x01(\tR\abizType\"A\n" +
-	"\x13UploadImageResponse\x12*\n" +
-	"\x06upload\x18\x01 \x01(\v2\x12.upload.UploadFileR\x06upload\"&\n" +
-	"\x14GetUploadInfoRequest\x12\x0e\n" +
-	"\x02id\x18\x01 \x01(\x03R\x02id\"C\n" +
-	"\x15GetUploadInfoResponse\x12*\n" +
-	"\x06upload\x18\x01 \x01(\v2\x12.upload.UploadFileR\x06upload2\xa5\x01\n" +
-	"\rUploadService\x12F\n" +
-	"\vUploadImage\x12\x1a.upload.UploadImageRequest\x1a\x1b.upload.UploadImageResponse\x12L\n" +
-	"\rGetUploadInfo\x12\x1c.upload.GetUploadInfoRequest\x1a\x1d.upload.GetUploadInfoResponseB:Z8github.com/Loe1210/personal-site/biz/model/upload;uploadb\x06proto3"
-
-var (
-	file_idl_upload_proto_rawDescOnce sync.Once
-	file_idl_upload_proto_rawDescData []byte
-)
-
-func file_idl_upload_proto_rawDescGZIP() []byte {
-	file_idl_upload_proto_rawDescOnce.Do(func() {
-		file_idl_upload_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_idl_upload_proto_rawDesc), len(file_idl_upload_proto_rawDesc)))
-	})
-	return file_idl_upload_proto_rawDescData
-}
-
-var file_idl_upload_proto_msgTypes = make([]protoimpl.MessageInfo, 5)
-var file_idl_upload_proto_goTypes = []any{
-	(*UploadFile)(nil),            // 0: upload.UploadFile
-	(*UploadImageRequest)(nil),    // 1: upload.UploadImageRequest
-	(*UploadImageResponse)(nil),   // 2: upload.UploadImageResponse
-	(*GetUploadInfoRequest)(nil),  // 3: upload.GetUploadInfoRequest
-	(*GetUploadInfoResponse)(nil), // 4: upload.GetUploadInfoResponse
-}
-var file_idl_upload_proto_depIdxs = []int32{
-	0, // 0: upload.UploadImageResponse.upload:type_name -> upload.UploadFile
-	0, // 1: upload.GetUploadInfoResponse.upload:type_name -> upload.UploadFile
-	1, // 2: upload.UploadService.UploadImage:input_type -> upload.UploadImageRequest
-	3, // 3: upload.UploadService.GetUploadInfo:input_type -> upload.GetUploadInfoRequest
-	2, // 4: upload.UploadService.UploadImage:output_type -> upload.UploadImageResponse
-	4, // 5: upload.UploadService.GetUploadInfo:output_type -> upload.GetUploadInfoResponse
-	4, // [4:6] is the sub-list for method output_type
-	2, // [2:4] is the sub-list for method input_type
-	2, // [2:2] is the sub-list for extension type_name
-	2, // [2:2] is the sub-list for extension extendee
-	0, // [0:2] is the sub-list for field type_name
-}
-
-func init() { file_idl_upload_proto_init() }
-func file_idl_upload_proto_init() {
-	if File_idl_upload_proto != nil {
-		return
-	}
-	type x struct{}
-	out := protoimpl.TypeBuilder{
-		File: protoimpl.DescBuilder{
-			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
-			RawDescriptor: unsafe.Slice(unsafe.StringData(file_idl_upload_proto_rawDesc), len(file_idl_upload_proto_rawDesc)),
-			NumEnums:      0,
-			NumMessages:   5,
-			NumExtensions: 0,
-			NumServices:   1,
-		},
-		GoTypes:           file_idl_upload_proto_goTypes,
-		DependencyIndexes: file_idl_upload_proto_depIdxs,
-		MessageInfos:      file_idl_upload_proto_msgTypes,
-	}.Build()
-	File_idl_upload_proto = out.File
-	file_idl_upload_proto_goTypes = nil
-	file_idl_upload_proto_depIdxs = nil
-}
